--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ main {
     border-radius: 5px;
     width: 600px;
     margin: auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 header {
@@ -34,11 +34,16 @@ section {
 aside {
     border: 2px solid #999;
     margin-bottom: 10px;
-    width: 152px;
+    width: 142px;
     float: right;
 }
 
 footer {
     border: 2px solid #999;
     margin-bottom: 10px;
+    
+}
+
+.clear{
+    clear: both;
 }
